[DTRA-V2]fix: fix the overlapping issue of parameter with purchase button (#17107)
* fix: fix the overlapping issue of parameter with purchase button

* fix: fix the issue to unpin only when one itme is present in list

* fix: add a useEffect to add a class is_minimized_and_visible

* fix: try converting rm to px in trade params

* fix: fix the overlapping issue of parameter with purchase button

* fix: added padding-bottom to trade params

* revert: changes in trade-parameters-container file

* fix: handle scroll for market closed

--- a/packages/trader/src/AppV2/Components/TradeParameters/trade-parameters.scss
+++ b/packages/trader/src/AppV2/Components/TradeParameters/trade-parameters.scss
@@ -68,6 +68,11 @@
     &--minimized {
         min-height: var(--core-size-3600);
         width: 100%;
+        padding-bottom: 6.4rem;
+
+        &:has(.trade-params__options__wrapper--horizontal:only-child) {
+            padding-bottom: 0;
+        }
     }
 }
 
